--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,16 +17,18 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          
+          <td class="favorite-btn">
+            <% if @book.favorited_by?(current_user) %>
+              <%= link_to @book.favorites.count, book_favorites_path(@book), method: :delete, class: "fas fa-heart heart_red" %>
+            <% else %>
+              <%= link_to @book.favorites.count, book_favorites_path(@book), method: :post, class: "fas fa-heart heart_blue" %>
+            <% end %>
+          </td>
           <td>コメント数: <%= @book.book_comments.count %></td>
-
           <% if @book.user == current_user %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
-
-
-
         </tr>
       </table>
       <%= render 'books/comment', book: @book,book_comment: @book_comment%>
